--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -1,5 +1,5 @@
 // Core variables and mixins
-@import "bootstrap/variables";
-@import "bootstrap/mixins";
+@import "bootstrap/variables"; //Breakpoints, Grid System, Container Sizes
+@import "bootstrap/mixins"; //Clearfix, Grid-framework, Grid
 
-@import "bootstrap/grid";
+@import "bootstrap/grid"; //Main grid system
