--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -3,3 +3,4 @@
 @import "bootstrap/mixins"; //Clearfix, Grid-framework, Grid
 
 @import "bootstrap/grid"; //Main grid system
+@import "bootstrap/responsive-utilities"; //Some responsive classes
