--- a/bootstrap/_mixins.scss
+++ b/bootstrap/_mixins.scss
@@ -1,3 +1,5 @@
+@import "mixins/responsive-visibility"; // Required by responsive-visibility
+
 @import "mixins/clearfix";  // Required by container fluid
 
 @import "mixins/grid-framework";
