--- a/bootstrap/_bootstrap.scss
+++ b/bootstrap/_bootstrap.scss
@@ -1,6 +1,9 @@
-/*********************
-BOOTSTRAP GRID STUFF
-*********************/
+// Bootstrap Grid
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+} //Bootstrap 3.0.0 Requires this for it's grid calculations.
 @import "variables"; //Breakpoints, Grid System, Container Sizes
 @import "mixins"; //Clearfix, Grid-framework, Grid
 
