--- a/bootstrap/_grid.scss
+++ b/bootstrap/_grid.scss
@@ -1,12 +1,14 @@
+//
 // Grid system
 // --------------------------------------------------
+
 
 // Container widths
 //
 // Set the container width, and override it for fixed navbars in media queries.
 
 .container {
-  @include container-fixed();
+  @include container-fixed;
 
   @media (min-width: $screen-sm-min) {
     width: $container-sm;
@@ -26,7 +28,7 @@
 // width for fluid, full width layouts.
 
 .container-fluid {
-  @include container-fixed();
+  @include container-fixed;
 }
 
 
@@ -35,7 +37,7 @@
 // Rows contain and clear the floats of your columns.
 
 .row {
-  @include make-row();
+  @include make-row;
 }
 
 
@@ -43,7 +45,7 @@
 //
 // Common styles for small and large grid columns
 
-@include make-grid-columns();
+@include make-grid-columns;
 
 
 // Extra small grid
